Full_Stack_Python/DI-Bootcamp/Week_3/Hackathon/Code/style.css
.parallax {
  /* The image used */
  background-image: url("backimg3.jpg");

  /* Set a specific height */
  max-height: 100%; 

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

}



body {
/*  background-attachment: fixed;*/
height: 100%;
margin: 0;
background-image: url("backimg3.jpg");
background-size: cover;
background-position: center;
background-repeat: no-repeat;
/*transition: background-image 2s ease-in-out;*/
}


.good {
  text-align: center;
  padding: 50px;
  margin-top: 105px ;
  margin-bottom: 105px;
  color: white;
  font-size: 87px;
  font-family: Daniel;
}


.grid-cont {
/*  display: grid;
  grid-template-columns: auto auto auto;*/
  background-color: #2196F3;
/*  padding: 10px;*/
}

.grid_item {
  display: grid;
  grid-template-columns: 32% 32% 32%;
  grid-column-gap: 30px;
  background-color: none;
/*  background-color: rgba(255, 255, 255, 0.8);*/
/*  border: 1px solid rgba(0, 0, 0, 0.8);*/
padding: 80px;
margin-left: 50px;
font-size: 30px;
text-align: center;
/*  width: 85%;*/
/*  margin: 50px;*/
}
.new1 {
/*  margin-top: 450px;*/
border-top: 2px solid rgb(200, 191, 231);
}





/*gri to be abel to move the Hi div*/
.gridintro {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-template-rows: 1fr 2fr 1fr;

}
/*.gridintro div{
  border: 2px solid  pink;
}
.gridintro p {
  border:  2px  solid lightgrey;
}*/


.hiintro {
  color: white;
/*  font-family: Bankgothic;*/
font-size: 100px;
font-family: Daniel;
position: inherit;
}
.someinfo {

}



main {
  min-height: 100px;
  padding-top: 80px;
  display: flex;
  justify-content: center;
/*  background: hsl(0, 0%, 20%);*/
}
#divider {
  height: 2px;
  width: 80%;
  background: blue;
  background: linear-gradient(90deg, hsl(0, 0%, 20%), hsl(0, 0%, 70%), hsl(0, 0%, 20%));
}
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  width: 350px;
  height: 350px;
  margin: auto;
  border-radius: 15px;
  text-align: center;
  opacity: 0.8;

}
.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

a img {
  width: 100%;
  border-radius: 5px 5px 0 0;
}
.allcards {
  margin-top: 47px;
  margin-bottom: 24px;
/*  display: grid;
  grid-template-rows:32% 32% 32%;*/

}
.container {
  padding-top: 24px;
  padding-bottom: 32px;
  padding-left: 16px;
  padding-right: 16px;
}


i {
  text-align: center;
}

.fa-500px{
  float: right;
  margin-right: 7px;
}


.card_1 {
  background-image: url(IMG_3746.jpg);
  background-size: cover;
/*  height: auto  ;*/
font-family: Bankgothic;
}
.card_2 {
  background-image: url(_MG_0084.jpg);
  background-size: cover;

/*  height: auto  ;*/
font-family: Bankgothic;
}
.card_3 {
  background-image: url(IMG_2219.JPG);
  background-size: cover;
  background-position: -51px  ;
/*  height: auto  ;*/
font-family: Bankgothic;
}

.scroller1 {
  color: white;
}


/*
.circular-menu {
  position: fixed;
  bottom: 1em;
  right: 1em;
}

.circular-menu .floating-btn {
  display: block;
  width: 3.5em;
  height: 3.5em;
  border-radius: 50%;
  background-color: rgb(191, 187, 244);
  box-shadow: 0 2px 5px 0 hsla(0, 0%, 0%, .26);  
  color: hsl(0, 0%, 100%);
  text-align: center;
  line-height: 3.9;
  cursor: pointer;
  outline: 0;
}

.circular-menu.active .floating-btn {
  box-shadow: inset 0 0 3px hsla(0, 0%, 0%, .3);
}

.circular-menu .floating-btn:active {
  box-shadow: 0 4px 8px 0 hsla(0, 0%, 0%, .4);
}

.circular-menu .floating-btn i {
  font-size: 1.3em;
  transition: transform .2s;  
}

.circular-menu.active .floating-btn i {
  transform: rotate(-45deg);
}

.circular-menu:after {
  display: block;
  content: ' ';
  width: 3.5em;
  height: 3.5em;
  border-radius: 50%;
  position: absolute;
  top: 0;
  right: 0;
  z-index: -2;
  background-color: none;
  transition: all .3s ease;
}

.circular-menu.active:after {
  transform: scale3d(5.5, 5.5, 1);
  transition-timing-function: cubic-bezier(.68, 1.55, .265, 1);
}

.circular-menu .items-wrapper {
  padding: 0;
  margin: 0;
}

.circular-menu .menu-item {
  position: absolute;
  top: .2em;
  right: .2em;
  z-index: -1;
  display: block;
  text-decoration: none;
  color: hsl(0, 0%, 100%);
  font-size: 1em;
  width: 3em;
  height: 3em;
  border-radius: 50%;
  text-align: center;
  line-height: 3;
  background-color: none;
  transition: transform .3s ease, background .2s ease;
}*/

/*.circular-menu .menu-item:hover {
  background-color: hsla(0,0%,0%,.3);
}*/
/*
.circular-menu.active .menu-item {
  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.circular-menu.active .menu-item:nth-child(1) {
  transform: translate3d(1em,-7em,0);
}

.circular-menu.active .menu-item:nth-child(2) {
  transform: translate3d(-3.5em,-6.3em,0);
}

.circular-menu.active .menu-item:nth-child(3) {
  transform: translate3d(-6.5em,-3.2em,0);
}

.circular-menu.active .menu-item:nth-child(4) {
  transform: translate3d(-7em,1em,8em);
}*/

/**
 * The other theme for this menu
 */

/*.circular-menu.circular-menu-left {
  top: 1em ;
  right: auto; 
  left: 1em;
}

.circular-menu.circular-menu-left .floating-btn {
  background-color: none;
}*/
/*
.circular-menu.circular-menu-left:after {
  background-color: none;
}

.circular-menu.circular-menu-left.active .floating-btn i {
  transform: rotate(90deg);
}

.circular-menu.circular-menu-left.active .menu-item:nth-child(1) {
  transform: translate3d(-0.5em,7.6em,0);
}

.circular-menu.circular-menu-left.active .menu-item:nth-child(2) {
  transform: translate3d(6.2em,3.6em,0);
}

.circular-menu.circular-menu-left.active .menu-item:nth-child(3) {
  transform: translate3d(3.5em,6.7em,0);
}

.circular-menu.circular-menu-left.active .menu-item:nth-child(4) {
  transform: translate3d(7em,-0.5em,0);
}*/

